<resources>
    <string name="app_name">BaseApplication</string>
    <string name="enter_live_url">Enter Live Url</string>
    <string name="Enter">Enter</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter">Enter</string>
    <string name="human_detection">Human Detection</string>
    <string name="off">Off</string>
    <string name="settings">Settings</string>
</resources>
